[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "al"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchvision",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
